--- a/index.html
+++ b/index.html
@@ -4,119 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./index.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="card.css">
     <title>Document</title>
-    <style scoped>
-    * { 
-        padding:0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-    body{
-        width:100vw;
-        min-height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    header{
-        background-color: #fff;
-        display: flex;
-        width: 100vw;
-        height: 9vh;
-        box-shadow: 0px 0px 16px 2px rgba(102, 102, 102, 0.1), 0px 0px 5px 1px rgba(102, 102, 102, 0.15); 
-        overflow: hidden;
-    }
-    .page-header{ 
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 100%;
-    }
-    .page-header__logo{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 24px;
-        color: #FFB000;
-    }
-    .logo__title:hover {
-        font-size: 1.5rem;
-        transition: 0.2s;
-    }
-    nav{ 
-        display: flex;
-        flex-direction: row;
-        margin: 0 24px 0 auto;
-    }
-    nav .nav-options__button * {
-        width: 100%;
-        height: 100%;
-        /* alinha o texto das opções no centro */
-        margin: 0 8px 0 0;
-        padding: 0 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-    }
-    .nav-options__button:hover {
-        background-color: #ddd;
-        color: rgb(223, 103, 56);
-    }
-    footer{ 
-        border-top: 1px solid #ccc;
-        background-color: #fff;
-        padding: 24px;
-    }
-    @media (max-width: 700px) {
-        /*
-        itens do menu em coluna
-        AdoteAqui Suma
-        */
-        header{
-            top:0;
-            left: 0;
-            position: absolute;
-            flex-direction: column;
-            min-width: 80px;
-            width: 25vw;
-            height: 100vh;
-        }
-        header > * {
-            width: 100%;
-        }
-        nav {
-            margin-top: 24px;
-            flex-direction: column;
-
-        }
-
-        .page-header__logo{
-            display: none
-        }
-        .page-header__nav-options{
-            margin: 0;
-            width: 100%;
-            margin-top: 10px;
-            height: auto;
-            display: flex;
-            flex-direction: column;
-        }
-        .nav-options__button{
-            /*sobrescreve margin global*/
-            margin: 8px 0 0 0;
-            padding: 8px 16px;
-        }
-        footer{
-            margin: auto 0 0 0;
-            padding-left: 30vw; 
-            align-self: flex-end;
-        }
-
-    }
-
-    </style>
+    
 </head>
 <body>
     <header>
@@ -125,6 +16,7 @@
                 <h3 class="logo__title">
                     AdoteAqui!
                 </h3>
+                <span>Adote um amigo! Conheça os animais que estão esperando por você!</span>
             </div>
             <nav class="page-header__nav-options">
                <div class="nav-options__button">
@@ -144,11 +36,104 @@
         </div>
     </header>
     <main>
-        <!-- populate  :D -->
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="https://i.pinimg.com/564x/46/37/2b/46372bd9d8ea018a5247a4ac5d9eabd1.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Oi, eu sou Milo, tenho 2 anos e adoro brincar.
+                A 2 anos fui encontrado em uma casa abandonada, quando meus cuidadares me encontraram.
+                Desde de então, estou a procura de uma lar, que possa me dar muito amor carinho, e se possivel, uma comidinha gostosa.
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/Lasanha.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Eu sou o Lasanha. Porque tenho cara que gosta de uma. Tenho 7 anos e nunca tive a chance de ter um lar. Vivia em um terreno baldio e meus colegas humanos me resgataram.
+                Sou calmo é brincalhão, preciso de uma família que mê muito amor. 
+                O Lasanha é porte médio, está castrado, vacinado e vermifugado.
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/pingo.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Eu sou o Pingo. Repara a minha cabeça. Sou pretinho e marrom de pêlos macios.Tenho 2 anos. Fui abandonado na rua, fiquei vagando sozinho e quase fui atropelado antes de ser resgatado.
+                Isso não me impediu de ser uma menino dócil e carinhoso que adora brincar.
+                O Pingo já está castrado e vacinado à espera de um lar.
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/tina.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Eu sou a Tina, sou uma menina e uma filhota um pouco tímida. Tenho 5 meses.
+                Sou carinhosa, porte médio e não vejo a hora de encontrar uma família para chamar de minha.
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/max.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Eu sou o Max. Um meninão de 2 meses. Sou muito carinhoso que ama um colo e adora brincar. 
+                Já está castrado, vacinado e vermifugado, aguardando ansiosamente para ser adotado!
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/Cookie.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Me chamo Cookie, fui abandonada covardemente em um estacionamento e fiquei sem entender nada.
+                A única coisa que quero é uma família e um lar pra ser muito feliz.
+                Tenho 3 anos, estou castrada e vacinada.
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/abigail.jpg"">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Sou a Abigail, tenho 2 aninhos, sou muito alegre e ativa.
+                E quem quiser ter uma companhia mara em casa, eu sou a resposta. 
+                Sou castrada e vacinada.
+            </p>
+        </div>
+        <div class="card">
+            <div class="card__img-container">
+                <img class="img-container__img" 
+                src="./pets/batata.jpg">
+            </div>
+            <h3 class="card__pet-name">Milo</h3>
+            <p class="card__description">
+                Eu sou o Batata. Tenho 4 meses.
+                Sou um coelho peludinho, maravilhoso, muito calmo, carinhoso e me dou muito bem com todos.
+                Me adote, por favor.
+            </p>
+        </div>
+
     </main>
     <footer>
         <div> &copy; Copyright - Todos os direitos reservados. </div>
-        <div></div>
     </footer>
 </body>
 </html>
