--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <h3 class="card__pet-name">Milo</h3>
             <p class="card__description">
                 Oi, eu sou Milo, tenho 2 anos e adoro brincar.
-                A 2 anos fui encontrado em uma casa abandonada, quando meus cuidadares me encontraram.
-                Desde de então, estou a procura de uma lar, que possa me dar muito amor carinho, e se possivel, uma comidinha gostosa.
+                A 2 anos fui encontrado em uma casa abandonada.
+                Desde de então, estou a procura de uma lar que possa me dar muito amor carinho, e se possivel, uma comidinha gostosa.
             </p>
         </div>
         <div class="card">
