--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img class="img-container__img" 
                 src="./pets/Lasanha.jpg">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Lasanha</h3>
             <p class="card__description">
                 Eu sou o Lasanha. Porque tenho cara que gosta de uma. Tenho 7 anos e nunca tive a chance de ter um lar. Vivia em um terreno baldio e meus colegas humanos me resgataram.
                 Sou calmo é brincalhão, preciso de uma família que mê muito amor. 
@@ -65,7 +65,7 @@
                 <img class="img-container__img" 
                 src="./pets/pingo.jpg">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Pingo</h3>
             <p class="card__description">
                 Eu sou o Pingo. Repara a minha cabeça. Sou pretinho e marrom de pêlos macios.Tenho 2 anos. Fui abandonado na rua, fiquei vagando sozinho e quase fui atropelado antes de ser resgatado.
                 Isso não me impediu de ser uma menino dócil e carinhoso que adora brincar.
@@ -77,7 +77,7 @@
                 <img class="img-container__img" 
                 src="./pets/tina.jpg">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Tina</h3>
             <p class="card__description">
                 Eu sou a Tina, sou uma menina e uma filhota um pouco tímida. Tenho 5 meses.
                 Sou carinhosa, porte médio e não vejo a hora de encontrar uma família para chamar de minha.
@@ -88,7 +88,7 @@
                 <img class="img-container__img" 
                 src="./pets/max.jpg">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Max</h3>
             <p class="card__description">
                 Eu sou o Max. Um meninão de 2 meses. Sou muito carinhoso que ama um colo e adora brincar. 
                 Já está castrado, vacinado e vermifugado, aguardando ansiosamente para ser adotado!
@@ -99,7 +99,7 @@
                 <img class="img-container__img" 
                 src="./pets/Cookie.jpg">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Cookie</h3>
             <p class="card__description">
                 Me chamo Cookie, fui abandonada covardemente em um estacionamento e fiquei sem entender nada.
                 A única coisa que quero é uma família e um lar pra ser muito feliz.
@@ -111,7 +111,7 @@
                 <img class="img-container__img" 
                 src="./pets/abigail.jpg"">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Abigail</h3>
             <p class="card__description">
                 Sou a Abigail, tenho 2 aninhos, sou muito alegre e ativa.
                 E quem quiser ter uma companhia mara em casa, eu sou a resposta. 
@@ -123,7 +123,7 @@
                 <img class="img-container__img" 
                 src="./pets/batata.jpg">
             </div>
-            <h3 class="card__pet-name">Milo</h3>
+            <h3 class="card__pet-name">Batata</h3>
             <p class="card__description">
                 Eu sou o Batata. Tenho 4 meses.
                 Sou um coelho peludinho, maravilhoso, muito calmo, carinhoso e me dou muito bem com todos.
